# libphos

./: .gitignore  Makefile.am  README.md  client.c  compat.h  configure.ac  gen-afl-data.sh  libtls.c  phos.h  phos_client.3  phos_client.c  phos_req.3  phos_server.3  phos_server.c  phos_uri.3  phos_uri.c  server.c  uri.c
compat/: explicit_bzero.c
examples/c/: .gitignore  Makefile  README.md  async-server.c  blocking-client.c  blocking-server.c  gurl2.c
examples/lua/: .gitignore  README.md  client_example.lua  phos.c  server_example.lua
examples/python/: README.md  client_example.py  setup.py
examples/python/phos/: __init__.py  client.py  server.py
tests/: fuzzy_server.c  uri_fuzzy.c  uri_parse_test.c  uri_res_test.c
